# yaml2json

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  install.sh
.github/workflows/: build.yml
benchmarks/: README.md  benchmark.sh  benchmark_results_summary.md  generate_compatible_yaml.sh  large_results.json  large_results.md  medium_1mb.yaml  medium_results.json  medium_results.md  performance_comparison_analysis.md  small_117kb.yaml  small_results.json  small_results.md  very_large_results.json  very_large_results.md
src/: main.cpp
src/lib/: ErrorHandler.cpp  ErrorHandler.h  FileReader.cpp  FileReader.h  JsonFormatter.cpp  JsonFormatter.h  YamlToJsonConverter.cpp  YamlToJsonConverter.h
tests/: CliCompatibilityTest.cpp  ErrorHandlerTest.cpp  FileReaderTest.cpp  IntegrationTest.cpp  JsonFormatterTest.cpp  YamlToJsonConverterTest.cpp
tests/test_data/: invalid.yaml  nested.yaml  simple.yaml
